embeddings working
